--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ably": "^1.2.39",
     "cors-anywhere": "^0.4.4",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.13"
   }
 }
